some html spacing and fix action link to submit

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,6 +14,6 @@
 }
 
 a.submission-id {
-    /*color: white;*/
+    color: white;
     font-weight: bold;
 }
